--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rome-ways"
-version = "0.1.0"
+version = "0.1.1"
 description = "A queue framework"
 authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
 license = "Apache License 2.0"
@@ -12,8 +12,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.11"
 meeseeks-singleton = "^0.4.2"
-romeways_memory_queue = { path = "./romeways_extras/memory_queue/", optional = true}
-freezegun = "^1.2.2"
+romeways_memory_queue = { version = "^0.1.0", optional = true}
 
 [tool.poetry.extras]
 memory = ["romeways_memory_queue"]
@@ -24,6 +23,7 @@ repository = "https://github.com/CenturyBoys/romeways"
 documentation = "https://github.com/CenturyBoys/romeways"
 
 [tool.poetry.group.dev.dependencies]
+freezegun = "^1.2.2"
 pytest-asyncio = "^0.21.0"
 pytest-cov = "^4.0.0"
 pylint = "^2.17.4"
