--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rome-ways"
-version = "0.1.1"
+version = "0.1.2"
 description = "A queue framework"
 authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
 license = "Apache License 2.0"
@@ -12,6 +12,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.11"
 meeseeks-singleton = "^0.4.2"
+romeways_memory_queue = { version = "^0.2.0", optional = true}
 
 [tool.poetry.extras]
 memory = ["romeways_memory_queue"]
