--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       types: [ python ]
     - id: pylint
       name: pylint
-      entry: pylint romeways
+      entry: pylint
       language: system
       types: [python]
       args:
@@ -30,20 +30,6 @@ repos:
       always_run: true
       args:
         [
+          "tests",
           "-cov=."
         ]
-# mutates not use coverage to ignore dataclass slots and frozen params
-#    - id: mutatest
-#      name: mutatest
-#      entry: mutatest
-#      language: system
-#      types: [ python ]
-#      args:
-#        [
-#          "-n",
-#          "100",
-#          "-s",
-#          ".",
-#        ]
-#      pass_filenames: false
-#      always_run: false
