--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest-cov = "^4.0.0"
 pylint = "^2.17.4"
 mutatest = "^3.1.0"
 black = "^23.11.0"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
